--- a/accessibility-inspector/popup/report-popup.css
+++ b/accessibility-inspector/popup/report-popup.css
@@ -98,6 +98,10 @@ body{
     width: 98%;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+}
+.issuses__list__details__title h3 {
+    margin: .3rem;
 }
 .issuses__list__details__code {
     background-color: #f4f4f4;
@@ -107,6 +111,7 @@ body{
     font-family: 'Consolas', monospace;
     font-size: 0.875em;
     border: 1px solid #e1e1e1;
+    margin-bottom: .5rem;
 }
 
 .issuses__list__details__container {
@@ -242,4 +247,18 @@ select option:checked {
 
 #report--content--markdown--preview hr {
     width: -webkit-fill-available;
+}
+
+.issuses__list__details__color__container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.issuses__list__details__color__container__show {
+    width: 1rem;
+    height: 1rem;
+    border: .1rem solid;
+    margin-left: 1rem;
 }
